Setup intro slide, playing for now

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - The HTML Presentation Framework</title>
+        <title>Adavnced Git: Workflows for Developers</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="description" content="Personal, Team and Client workflows in Git">
+		<meta name="author" content="Matthew B. Gray">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/reveal.min.css">
-		<link rel="stylesheet" href="css/theme/default.css" id="theme">
+		<link rel="stylesheet" href="css/theme/solarized.css" id="theme">
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -32,35 +32,46 @@
 		</script>
 
 		<!--[if lt IE 9]>
-		<script src="lib/js/html5shiv.js"></script>
+            <script src="lib/js/html5shiv.js"></script>
 		<![endif]-->
 	</head>
 
 	<body>
-
 		<div class="reveal">
-
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section>
-					<h1>Reveal.js</h1>
-					<h3>HTML Presentations Made Easy</h3>
-					<p>
-						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
-					</p>
-				</section>
+        <section class="intro">
+          <h1>Advanced Git</h1>
+          <h2>Workflows for Developers</h2>
 
-				<section>
-					<h2>Heads Up</h2>
-					<p>
-						reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with
-						support for CSS 3D transforms to see it in its full glory.
-					</p>
+          <small>
+            Slides by <a href="http://matthew.geek.nz">Matthew B. Gray</a>
+            / <a href="https://twitter.com/saltcrab">@saltcrab</a>
+          </small>
+
+          <hr>
+          <h3>Special thanks to</h3>
+          <ul>
+            <li>Mike O' – For approving this course</li>
+            <li>Alison Aldred – For being generally awesome</li>
+            <li>Evan Giles – Inspiration and advice</li>
+          </ul>
+
+          <hr>
+          <small>
+            Theme: <a href="?theme=moon">Dark</a>
+						/ <a href="?theme=solarized">Light</a>
+          </small>
 
 					<aside class="notes">
-						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
+            <ul>
+              <li>Breaks every 30 minutes for 3 minutes</li>
+              <li>Expecting this course to go for 3~4hrs</li>
+              <li>Have the WR ready</li>
+              <li>Check projector light/dark themes</li>
+            </ul>
 					</aside>
-				</section>
+        </section>
 
 				<!-- Example of nested vertical slides -->
 				<section>
@@ -204,9 +215,9 @@
 						Additionally custom events can be triggered on a per slide basis by binding to the <code>data-state</code> name.
 					</p>
 					<pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">
-Reveal.addEventListener( 'customevent', function() {
-	console.log( '"customevent" has fired' );
-} );
+                        Reveal.addEventListener( 'customevent', function() {
+                            console.log( '"customevent" has fired' );
+                        } );
 					</code></pre>
 				</section>
 
