whitespace changes - set tabs instead of spaces (upstream preference)

--- a/index.html
+++ b/index.html
@@ -40,50 +40,53 @@
 		<div class="reveal">
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-        <section class="intro">
-          <h1>Advanced Git</h1>
-          <h2>Workflows for Developers</h2>
+				<section class="intro">
+					<h1>Advanced Git</h1>
+					<h2>Workflows for Developers</h2>
 
-          <small>
-            Slides by <a href="http://matthew.geek.nz">Matthew B. Gray</a>
-            / <a href="https://twitter.com/saltcrab">@saltcrab</a>
-          </small>
+					<small>
+						Slides by <a href="http://matthew.geek.nz">Matthew B. Gray</a>
+						/ <a href="https://twitter.com/saltcrab">@saltcrab</a>
+					</small>
 
-          <hr>
-          <h3>Special thanks to</h3>
-          <ul>
-            <li>Mike O' – For approving this course</li>
-            <li>Alison Aldred – For being generally awesome</li>
-            <li>Evan Giles – Inspiration and advice</li>
-          </ul>
+					<hr>
+					<h3>Special thanks to</h3>
+					<ul>
+						<li>Mike O' – For approving this course</li>
+						<li>Alison Aldred – For being generally awesome</li>
+						<li>Evan Giles – Inspiration and advice</li>
+					</ul>
 
-          <hr>
-          <small>
-            Theme: <a href="?theme=moon">Dark</a>
-						/ <a href="?theme=solarized">Light</a>
-          </small>
+					<hr>
+					<small>
+						<!-- Well lit room? Light theme -->
+						Theme: <a href="?theme=moon">Dark</a>
+							/ <a href="?theme=solarized">Light</a>
+					</small>
 
 					<aside class="notes">
-            <ul>
-              <li>Breaks every 30 minutes for 3 minutes</li>
-              <li>Expecting this course to go for 3~4hrs</li>
-              <li>Have the WR ready</li>
-              <li>Check projector light/dark themes</li>
-            </ul>
+						<ul>
+							<li>Breaks every 30 minutes for 3 minutes</li>
+							<li>Expecting this course to go for 3~4hrs</li>
+							<li>Have the WR ready</li>
+							<li>Check projector light/dark themes</li>
+						</ul>
 					</aside>
-        </section>
+				</section>
 
 				<!-- Example of nested vertical slides -->
 				<section>
-					<section>
-						<h2>Vertical Slides</h2>
-						<p>
-							Slides can be nested inside of other slides,
-							try pressing <a href="#" class="navigate-down">down</a>.
-						</p>
-						<a href="#" class="image navigate-down">
-							<img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow">
-						</a>
+					<section data-markdown>
+						<script type="text/template">
+							## Overview
+							--------------------------------------------------------------------------------
+							0. Getting Started
+							1. Personal workflows
+							2. Team workflows
+							3. Client workflows (managing release cycles)
+
+							Personal workflows ~> Team workflows ~> Client workflows
+						</script>
 					</section>
 					<section>
 						<h2>Basement Level 1</h2>
@@ -351,17 +354,19 @@ function linkify( selector ) {
 				</section>
 
 				<section>
-					<h2>Stellar Links</h2>
+					<h2>Further Reading</h2>
 					<ul>
-						<li><a href="http://slid.es">Try the online editor</a></li>
 						<li><a href="https://github.com/hakimel/reveal.js">Source code on GitHub</a></li>
-						<li><a href="http://twitter.com/hakimel">Follow me on Twitter</a></li>
+					</ul>
+          <hr>
+					<h2>Attribution</h2>
+					<ul>
+						<li><a href="https://github.com/hakimel/reveal.js">Source code on GitHub</a></li>
 					</ul>
 				</section>
 
 				<section>
-					<h1>THE END</h1>
-					<h3>BY Hakim El Hattab / hakim.se</h3>
+					<h1>END</h1>
 				</section>
 
 			</div>
