Less cheese on that thanks slide

--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
 					</section>
 				</section>
 
-				<section data-background-image="images/end.gif">
-					<big>
-						Thanks! <a href="https://twitter.com/saltcrab">@saltcrab</a>
-					</big>
+				<section data-background-image="images/dazzle.gif">
+					<h1 style="text-transform:none">
+						Thanks! - <a href="https://twitter.com/saltcrab">@saltcrab</a>
+					</h1>
 				</section>
 
 				<section>
