Setup titles in empty areas

--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
 					</section>
 				</section>
 
-				<!-- Example of nested vertical slides -->
 				<section data-markdown>
 					<script type="text/template">
 						## Overview
@@ -183,6 +182,36 @@
 							- Rewrite history with interactive rebase
 						</script>
 					</section>
+					<section data-markdown>
+						<script type="text/template">
+							### Unlocking achievements, making git a bit more fun
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							### Context hunting with Bisect, Blame, Log and Pickaxe
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							### Mastering branches with rebase and reset
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							### Audit your work interactively with your staging area
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							### Manage merge conflicts like a pro
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							### Rewrite history with interactive rebase
+						</script>
+					</section>
 				</section>
 
 				<section>
@@ -198,6 +227,26 @@
 							- Working with people who don't enjoy source control
 							- Manage conflicts like a pro
 							- Clean history, rebase verses merge
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							### Quickly setup local, network accessible repos
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							### Working with people who don't enjoy source control
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							### Manage conflicts like a pro
+						</script>
+					</section>
+					<section data-markdown>
+						<script type="text/template">
+							### Clean history, rebase verses merge
 						</script>
 					</section>
 				</section>
