Added some todos, tidy up index

--- a/index.html
+++ b/index.html
@@ -176,11 +176,10 @@
 							--------------------------------------------------------------------------------
 							## Overview: Personal workflows
 							- Unlocking achievements, making git a bit more fun
-							- Context hunting with Bisect, Blame, Log and Pickaxe
-							- Mastering branches with rebase and reset
-							- Audit your work interactively with your staging area
+							- Context hunting / Isolate and Triage issues
+							- Mastering branches
 							- Manage merge conflicts like a pro
-							- Rewrite history with interactive rebase
+							- Audit your work interactively
 						</script>
 					</section>
 					<section data-markdown>
@@ -283,6 +282,8 @@
 							</a></p>
 						</div>
 					</section>
+					<section data-background-image="images/dazzle.gif">
+					</section>
 					<section>
 						<h3>Typical git workflow</h3>
 						<img
@@ -290,9 +291,9 @@
 							height="500px"
 						>
 					</section>
-					<section data-markdown>
+					<section data-markdown> <!-- Context hunting: Log Bisect, Blame, Pickaxe -->
 						<script type="text/template">
-							### Context hunting with Bisect, Blame, Log and Pickaxe
+							### Context hunting / Isolate, Triage
 							----------------------------------------
 							This is a BEFORE YOU START thing, helps isolate and triage
 
@@ -428,12 +429,19 @@
 					</section>
 					<section data-markdown>
 						<script type="text/template">
-							### Mastering branches with rebase and reset
-						</script>
-					</section>
-					<section data-markdown>
-						<script type="text/template">
-							### Audit your work interactively with your staging area
+							### Mastering branches
+							TODO Define nodes on those graph 
+							* Nodes represent diffs WRT each other
+							* Nodes represent entire filesystem layout on their own
+							* Nodes are immutable
+							TODO insert png here with history fu
+							TODO define a branch
+							TODO define a tag
+							TODO define a commit
+							TODO link these 3
+							TODO What you can use a branch for
+							TODO Rewrite history with interactive rebase
+							TODO merge histories
 						</script>
 					</section>
 					<section data-markdown>
@@ -443,7 +451,8 @@
 					</section>
 					<section data-markdown>
 						<script type="text/template">
-							### Rewrite history with interactive rebase
+							### Audit your work interactively
+							Audit your work interactively with your staging area
 						</script>
 					</section>
 				</section>
