Moved sections around for consistency with diagram

--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
 							- Unlocking achievements, making git a bit more fun
 							- Context hunting / Isolate and Triage issues
 							- Mastering branches
-							- Manage merge conflicts like a pro
 							- Audit your work interactively
+							- Manage merge conflicts like a pro
 						</script>
 					</section>
 					<section data-markdown>
@@ -247,14 +247,14 @@
 						<h3>Some fun achievements I've unlocked</h3>
 						<div class="fragment current-visible" style="position:absolute;">
 							<p>--------------------------------------------------------------------------------</p>
-							<p>Apprentice Gipsy (Level 3)</p>
-							<p>Create, list, delete a tag signed with GPG using git tag</p>
+							<p>Cathedral Worker (Level 1)</p>
+							<p>Cloned submodule repository and checked out commits specified by superproject.</p>
 							<p>--------------------------------------------------------------------------------</p>
 						</div>
 						<div class="fragment current-visible" style="position:absolute;">
 							<p>--------------------------------------------------------------------------------</p>
-							<p>Cherry Picker</p>
-							<p>Used git-cherry-pick to add a sha from another branch into the current branch.</p>
+							<p>Garage Inventor (Level 1)</p>
+							<p>Used a custom alias for a Git command</p>
 							<p>--------------------------------------------------------------------------------</p>
 						</div>
 						<div class="fragment current-visible" style="position:absolute;">
@@ -446,13 +446,13 @@
 					</section>
 					<section data-markdown>
 						<script type="text/template">
-							### Manage merge conflicts like a pro
+							### Audit your work interactively
+							Audit your work interactively with your staging area
 						</script>
 					</section>
 					<section data-markdown>
 						<script type="text/template">
-							### Audit your work interactively
-							Audit your work interactively with your staging area
+							### Manage merge conflicts like a pro
 						</script>
 					</section>
 				</section>
